# memory-allocator-c

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: c-ci.yml  cpp-ci.yml  pr-validation.yml  rust-ci.yml  security.yml  test-suite.yml
docs/: 01-memory-fundamentals.md  01_memory_fundamentals.md  02-block-structure.md  02_block_structure.md  03_memory_sourcing.md  04_basic_malloc.md  05-coalescing-free.md  05_coalescing_free.md  06_allocation_strategies.md  07_error_handling.md  08_standard_compliance.md  09_thread_safety_global_mutex.md  10_thread_local_optimization.md  11_performance_analysis.md  README.md
include/: allocator.h
scripts/: format.sh  lint.sh  pre-commit  run-tests.sh  setup.sh
src/: allocator.c
tests/: CMakeLists.txt  README.md  allocator.c
